--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,29 @@
     display: none !important;
 }
 
+/* Скрыть цифры на оси X для первых двух графиков */
+.recharts-cartesian-axis-x .recharts-cartesian-axis-tick-value {
+    opacity: 0 !important;
+}
+
+/* Убрать отступы графиков */
+.recharts-wrapper {
+    margin-left: 25px !important;
+    padding-left: 0 !important;
+    transform: translateX(-15%) !important;
+}
+
+.recharts-surface {
+    margin-left: 25px !important;
+    padding-left: 0 !important;
+}
+
+.recharts-cartesian-axis {
+    margin-left: 25px !important;
+    padding-left: 0 !important;
+}
+
+
 .recharts-cartesian-grid-horizontal line {
     stroke: #f9fafb;
     stroke-width: 1;
